--- a/detailsCategory.html
+++ b/detailsCategory.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container d-flex justify-content-between align-items-center">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="detailsCategory.html">
                     <img src="images/logo/Logo JX-HIFI extern transparent.png" alt="logo jx-hifi" width="100">
                 </a>
 
