commit et push moduleAdmin(sprint1) completion du module(magasin.html)

--- a/detailsCategory.html
+++ b/detailsCategory.html
@@ -139,7 +139,7 @@
                                     </div>
                                     <div class="maxBox w-50 pe-1 me-1">
                                         <div class="input-group">
-                                            <input type="text" name="txtMaxVal" class="inputField txtMaxVal" onchange="setMaxInput()"">
+                                            <input type="text" name="txtMaxVal" class="inputField txtMaxVal" onchange="setMaxInput()"/>
                                             <span class="currency d-flex align-items-center text-center">$</span>
                                         </div>
                                     </div>
