--- a/AdminModule/registreUtilisateur.html
+++ b/AdminModule/registreUtilisateur.html
@@ -66,7 +66,7 @@
                     </a>
                 </li>
                 <li class="nav-item mb-3">
-                    <a href="#" class="nav-link link-body-emphasis">
+                    <a href="./magasin.html" class="nav-link link-body-emphasis">
                         <img class="icon me-2" src="assets/svgIcon/buildings.svg" alt="Shops"> Gestion des Magasins
                     </a>
                 </li>
