--- a/AdminModule/commande.html
+++ b/AdminModule/commande.html
@@ -723,6 +723,12 @@
                 La suppression a ete effectuer avec succès
               </div>
             </div>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+              <label class="form-check-label" for="flexCheckDefault">
+                Déactivé la commande
+              </label>
+            </div><br>
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
             <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Supprimer</button>
           </div>
